# libfdupe

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  filecompare.cpp  filecompare.h  filefinder.cpp  filefinder.h  files.cpp  files.h  fletcher.cpp  fletcher.h  prefixtree.cpp  prefixtree.h
tests/: CMakeLists.txt
tests/checksum/: CMakeLists.txt  main.cpp
tests/filecompare/: CMakeLists.txt  main.cpp
tests/findfiles/: CMakeLists.txt  main.cpp
